Fixed desktop layout, worked on tablet layout fix

--- a/style.css
+++ b/style.css
@@ -159,46 +159,38 @@ a:hover {
 /* Media queries */
 /* ! Tablet */
 @media (min-width: 500px) {
-    .container {
-        display: initial;
+    header:before {
+        top: -180px;
+        bottom: 75%;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+    .container, .content, .lead {
+        display: block;
     }
     header {
         max-width: 80vw;
         background: white;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
         margin-top: 4rem;
-
-        display: flex;
-        justify-items: center;
-        align-items: center;
     }
-    header:before {
-        top: -180px;
-        bottom: 75%;
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-
-    }
-    header h1 {
-        top: -2.85rem;
-        left: 9.1rem;
-        z-index: 1;
-    }
-    header h2 {
-        display: inline-block;
-        text-align: center;
-        margin-top: 2rem;
-        margin-bottom: .2rem;
-    } 
     header p {
         padding: 0 1rem;
+        text-align: justify;
     }
     header img {
-        max-width: 50%;
+        max-width: 60%;
         float: left;
-        margin-right: 1rem;
-        position: relative;
-        top: -3em;
-        left: -3rem;
+        margin: 0 1rem .5rem 0;
+        transform: translate(-3rem, -3rem);
+    }
+    header h1 {
+        top: -3.25rem;
+        left: 10rem;
+        padding: 0;
+    }
+    header h2 {
+        display: inline;
+        text-align: center;
     }
     header .links {
         width: 100px;
@@ -230,13 +222,17 @@ a:hover {
 }
 
 @media (min-width: 1000px) {
+
     /* ! Header DESKTOP  */
     header:before {
         top: -350px;
-        bottom: 30%;
+        bottom: 31.5%;
+    }
+    .content {
+        display: flex;
+
     }
     header {
-        display: initial;
         height: 100vh;
         background-color: initial;
         box-shadow: none;
@@ -258,7 +254,7 @@ a:hover {
     header h1 {
         display: inline-block;
         position: absolute;
-        top: 37rem;
+        bottom: 0;
         left: 7.5rem;
 
         font-size: 5rem;
@@ -282,14 +278,14 @@ a:hover {
         top: 0;
         left: 0;
 
-        transform: translateY(-15%);
+        transform: translateY(-12%);
     }
     header .lead {
-        width: 60%;
+        width: 50%;
         /* height: 100%; */
     }
     header .content {
-        height: 100;
+        height: 100%;
     }
 
     main {
